2008-11-11  Murray Cumming  <murrayc@murrayc.com>

	* configure.in: Mentioned projects.gnome.org/css/Makefile.am.

2008-11-11  Murray Cumming  <murrayc@murrayc.com>

	* Moved www.gnome.org/projects/ to projects.gnome.org/,
	changing the urlpath appropriately in the Makefile.am files.
	Copied the css directory from www.gnome.org/ to projects.gnome.org/.
	We now need to change the web server configuration to host this.

2008-11-03  Murray Cumming  <murrayc@murrayc.com>

	* www.gnome.org/press/releases/index.wml: Update the links to 
	the 2.12 and 2.14 press releases.

2008-11-03  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* www.gnome.org/start/Makefile.am:
	* www.gnome.org/start/2.12/press_release/: Moved to:
	* www.gnome.org/press/releases/2.12/
	* www.gnome.org/start/2.14/press_release/: Moved to:
	* www.gnome.org/press/releases/2.14/

	* www.gnome.org/htaccess: Redirected appropriately.

2008-11-03  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* www.gnome.org/start/Makefile.am:
	* www.gnome.org/htaccess:

	* www.gnome.org/start/2.0/:
	* www.gnome.org/start/2.2/:
	* www.gnome.org/start/2.4/:
	* www.gnome.org/start/2.6/:
	* www.gnome.org/start/2.8/:
	* www.gnome.org/start/2.10/:
	Removed and redirected to library.gnome.org.
	* www.gnome.org/start/2.1/:
	* www.gnome.org/start/2.3/:
	* www.gnome.org/start/2.5/:
	* www.gnome.org/start/2.7/:
	* www.gnome.org/start/2.9/:
	* www.gnome.org/start/2.11/:
	Remove and redirect to start/unstable because nobody needs the old 
	unstable pages.

	2.12 and 2.14 are still there because they contain press releases
	that are not yet moved elsewhere.

2008-11-03  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/index.wml: add news about new AB members, as requested

2008-11-03  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/press/releases/Makefile.am: s/wml/html/

2008-11-03  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/press/releases/2008-10-motorola-google.wml: