@@ -1,5 +1,11 @@
 2008-11-11  Murray Cumming  <murrayc@murrayc.com>
 
+	* projects.gnome.org/gnumeric/Makefile.am: Commented out the attempt 
+	to write an ls list to the files file, because it breaks the build.
+	Maybe that file needs to be in svn.
+
+2008-11-11  Murray Cumming  <murrayc@murrayc.com>
+
 	* configure.in: Mentioned projects.gnome.org/css/Makefile.am.
 
 2008-11-11  Murray Cumming  <murrayc@murrayc.com>
